2008-01-30  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	fixed compiler warning

2008-01-26  Olivier  <chapuis(at)lri(dot)fr>

	* libs/FlocaleCharset.c: (FlocaleInit_X_Charset),
	(FlocaleCharsetInit), (FlocaleCharsetGetDefaultCharset):
	* NEWS:
	Fixed the determination of the X charset on UTF-8 system

2008-01-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/placement.c (__pl_minoverlap_get_next_x):
	do not add screen offset to window position

	* libs/FlocaleCharset.c (FlocaleInit_X_Charset):
	fixed a memory leak

2008-01-07  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	Some html documentation files were not installed.

2008-01-07  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/style.c (style_parse_one_style_option):
	fixed parsing of screen argument of the SnapAttraction Style

2007-12-07  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/move_resize.c (DoSnapAttract):
	Use edge move resistance, and not delay for top edge when moving
	windows.

2007-12-03  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/events.c (HandleMapRequestKeepRaised)
	(test_withdraw_request):
	Don't map windows that request to be moved back to WithdrawnState
	by the ICCCM2 method before they have been mapped. (Fixes bug with
	disappearing windows.)

2007-11-24  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.25

	* NEWS:
	* configure.ac:
	updated for 2.5.24 release

2007-11-23  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/menus.c (__mloop_exit):
	* fvwm/menubindings.c (parse_menu_action):
	* fvwm/bindings.c:
	reindented and cleaned up some code

2007-11-16  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/update.c (apply_window_updates):
	* fvwm/add_window.c (setup_style_and_decor):
	(setup_numeric_vals):
	* fvwm/add_window.h:
	* fvwm/style.h:
	* libs/defaults.h:
	* fvwm/events.c (HandleEnterNotify):