@@ -17,6 +17,8 @@ Changes in beta release 2.5.25 (not released yet)
    - Fixed a bug in MinOverlap placement.
    - Fixed the StickyAcrossPages style in the FvwmPager.
    - Fixed the determination of the X charset on UTF-8 systems.
+   - Fixed a crash when certain EWMH messages were sent to
+     unmanaged windows.
 
 -------------------------------------------------------------------
 
